--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- Home Page code start-->
 <!-- Section 1 code ( HSec1.jsx) -->
 <section
-    class="container mx-auto text-center py-[50px] lg:py-[80px] px-[20px] lg:px-[96px] h-auto lg:h-screen heading-section">
+    class="container mx-auto text-center py-[50px] lg:py-[80px] px-[20px] lg:px-[96px] h-auto lg:h-screen xl:h-auto heading-section">
     <div class="lg:py-[50px]" data-aos="zoom-in " data-aos-duration="3000">
         <h1 class="text-[22px] lg:text-[50px] font-bold lg:leading-[75px] text-[black]">
             Build <span class="text-[#2385C6]">Smarter</span>. Design Better. <br/> Deliver <span class="text-[#2385C6]">Faster</span>.
