--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- Home Page code start-->
 <!-- Section 1 code ( HSec1.jsx) -->
 <section
-    class="container mx-auto text-center py-[50px] lg:py-[80px] px-[20px] lg:px-[96px] h-auto lg:h-screen xl:h-auto heading-section">
+    class="container mx-auto text-center py-[50px] lg:py-[80px] px-[20px] lg:px-[96px] h-auto lg:h-screen heading-section">
     <div class="lg:py-[50px]" data-aos="zoom-in " data-aos-duration="3000">
         <h1 class="text-[22px] lg:text-[50px] font-bold lg:leading-[75px] text-[black]">
             Build <span class="text-[#2385C6]">Smarter</span>. Design Better. <br/> Deliver <span class="text-[#2385C6]">Faster</span>.
@@ -54,7 +54,7 @@
 <!-- Section 2 code  -->
 
 <section
-    class="bg-[#54C4CF] hs2 text-center text-white h-[650px] md:h-[600px] heading-section md:flex sm:gap-0 lg:gap-[134px] lg:px-[96px] lg:py-[80px] lg:justify-center ">
+    class="bg-[#54C4CF] hs2 text-center text-white h-auto md:h-[600px] heading-section md:flex sm:gap-0 lg:gap-[134px] lg:px-[96px] py-0 lg:py-[80px] lg:justify-center ">
     <div class='w-auto p-4 py-4 md:py-0 lg:w-[500px] lg:h-[500px] leftdiv relative'>
         <img src="/assets/img1.png" class=mx-auto w-[330px] sm:w-[420px] lg:w-auto lg:h-auto hgif bg-cover
             bg-contain" alt='' data-aos="flip-right" data-aos-duration="3000" />
