--- a/index.html
+++ b/index.html
@@ -51,49 +51,30 @@
 </section>
 <!-- Section 1 code ( HSec1.jsx) end -->
 
-<!-- Section 2 code  -->
-
-<section
-    class="bg-[#54C4CF] hs2 text-center text-white h-auto md:h-[600px] heading-section md:flex sm:gap-0 lg:gap-[134px] lg:px-[96px] py-0 lg:py-[80px] lg:justify-center ">
-    <div class='w-auto p-4 py-4 md:py-0 lg:w-[500px] lg:h-[500px] leftdiv relative'>
-        <img src="/assets/img1.png" class=mx-auto w-[330px] sm:w-[420px] lg:w-auto lg:h-auto hgif bg-cover
-            bg-contain" alt='' data-aos="flip-right" data-aos-duration="3000" />
-        <!-- <img src="/assets/img1.png" class=mx-auto w-[330px] sm:w-[420px] lg:w-32 lg:h-auto hgif bg-cover
-            bg-contain" alt='' data-aos="flip-right" data-aos-duration="3000" /> -->
-        <!-- <div class="watermark absolute w-[100px] h-[50px] bg-white" style="right: -10px; bottom: -140px;"></div> -->
-    </div>
-    <div class="w-[350px] mx-auto lg:w-[508px] h-[511px] lg:text-left lg:mt-20 mt-8" data-aos="fade-up"
-        data-aos-duration="3000">
-        <h2
-            class="lg:w-[508px] h-[100px] text-[24px] py-7 lg:py-4 lg:text-[36px] font-Source Sans Pro lg:leading-[50px] font-bold mb-4 text-[#2a2a2a]">
-            <!-- <span class="text-[#726ae3]">Empowering</span> Your Defense:<br />Our <span class="text-[#726ae3]">Proactive
-                Approach </span> -->
-                Your <span class="text-white">Vision</span>. Our Code. <span class="text-white">Designed</span> to Win.
-        </h2>
-        <p
-            class="p-6 lg:p-0 text-justify lg:w-full text-white font-Source Sans Pro lg:leading-[28px] text-[12px] lg:text-[17px] font-400 mt-[40px]">
-            <!-- In the realm of cybersecurity, an attack often unfolds in a series of steps. Initially, attackers
-            conduct
-            meticulous reconnaissance to identify vulnerabilities across your organization's digital landscape. They
-            then
-            exploit an Initial Attack Vector (IAV) to infiltrate and establish a foothold. Subsequently, they
-            escalate
-            privileges, maneuvering laterally within your infrastructure.
-            <br /><br />Our solution intervenes at a critical juncture in this process, disrupting the attack chain
-            by
-            providing actionable insights into potential IAVs targeting your organization. -->
-            In a digital world flooded with one-size-fits-all services, Spinnovix stands out by engineering custom-built solutions that blend innovation, performance, and security. We don’t just build software—we architect experiences that create real business impact.
-        </p>
-        <!-- <div class=" gets flex justify-center lg:justify-start space-x-4 gap-6">
-
-            <a class="solution-button2 text-[12px] font-bold text-center text-white items-center" href="/solutions">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                Explore Solutions
-            </a>
-        </div> -->
+<!-- Section 2 code  -->  
+<section class="bg-[#54C4CF] hs2 text-center text-white w-full py-8 md:py-12 lg:py-20 overflow-hidden">
+    <div class="container mx-auto px-4 flex flex-col md:flex-row items-center justify-center gap-6 sm:gap-8 lg:gap-28">
+        <!-- Left div with image -->
+        <div class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl relative mb-8 md:mb-0">
+            <img 
+                src="/assets/img1.png" 
+                class="mx-auto w-full max-w-[280px] sm:max-w-[330px] md:max-w-[380px] lg:max-w-[420px] xl:max-w-[500px] hgif bg-cover bg-contain" 
+                alt="Feature image" 
+                data-aos="flip-right" 
+                data-aos-duration="3000" 
+            />
+        </div>
+        
+        <!-- Right div with text content -->
+        <div class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl flex flex-col md:text-left" data-aos="fade-up" data-aos-duration="3000">
+            <h2 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold mb-4 sm:mb-6 lg:mb-8 text-[#2a2a2a] font-['Source_Sans_Pro'] leading-tight">
+                Your <span class="text-white">Vision</span>. Our Code.<br/> <span class="text-white">Designed</span> to Win.
+            </h2>
+            
+            <p class="text-xs sm:text-sm md:text-base lg:text-xl text-white text-justify md:text-left font-['Source_Sans_Pro'] leading-relaxed mt-4 sm:mt-6 lg:mt-8">
+                In a digital world flooded with one-size-fits-all services, Spinnovix stands out by engineering custom-built solutions that blend innovation, performance, and security. We don't just build software—we architect experiences that create real business impact.
+            </p>
+        </div>
     </div>
 </section>
 <!-- Section 2 HSec2 end -->
@@ -185,7 +166,7 @@
 
 <!-- Section 4 Start-->
 <section class="mx-auto py-2 lg:py-[80px] px-4 lg:px-[96px] lg:h-[550px] overflow-hidden">
-    <h2 class="text-[24px] lg:text-[36px] font-bold text-center text-[#2385C6] mb-[5rem] px-[25px] lg:px-0">Services
+    <h2 class="text-[20px] lg:text-[36px] font-bold text-center text-[#2385C6] py-8 px-[25px] lg:px-0">Services
         Delivered By Spinovix</h2>
     <div class="chbox flex">
         <div class="marquee flex pb-1">
