testimonial swipe geusture added

--- a/index.html
+++ b/index.html
@@ -544,13 +544,13 @@
 <section class="py-[80px] relative lg:h-[650px]">
     <h2 class="text-[20px] lg:text-[36px] font-bold text-center mb-8 lg:mb-12 text-[#2385C6] px-[25px] lg:px-0">See
         testimonials from our clients</h2>
-    <div class="px-4 lg:px-20">
+    <div class="testimonial-section px-4 lg:px-20">
         <div id="testimonial-1" style="display: block;">
             <div
-                class="relative testmain div1 flex flex-col sm:flex-row lg:flex-row mx-auto lg:w-[1084px] sm:w-[auto] h-auto lg:h-[380px] rounded-[20px] gap-4">
+                class="relative testmain div1 flex flex-col sm:flex-row mx-auto max-w-full lg:w-[1084px] h-auto lg:h-[380px] rounded-[20px] gap-4">
                 <div class="flex-1 flex flex-col h-auto items-start justify-center">
                     <p
-                        class="pl-3 lg:pl-[50px] w-full lg:w-[695px] font-Source Sans Pro font-400 text-[16px] lg:text-[19px] leading-[26px] text-black mb-4 text-justify">
+                        class="px-4 lg:pl-[50px] w-full lg:w-[695px] font-Source Sans Pro font-400 text-[16px] lg:text-[19px] leading-[26px] text-black mb-4 text-justify">
                         The quality of the product and the services is great and if you are a happy customer of
                         such services, you are bound to give these ratings.
                     </p>
@@ -568,7 +568,7 @@
                         <div class="bg-Logo w-[200px] h-[100px] bg-contain bg-no-repeat"></div>
                     </div>
                 </div>
-                <div class="absolute hexagon-grid CustomHexagon mb-8 lg:mb-0 ml-[80px] lg:ml-0 top-[105%] lg:top-[47%] sm:left-[200px] lg:left-[-70px]"
+                <div class="absolute hexagon-grid CustomHexagon mb-8 lg:mb-0 ml-[80px] lg:ml-0 top-[105%] lg:top-[47%] sm:left-[200px] lg:left-[-96px]"
                     onclick="handlePreviousClick()">
                     <a class="lessthan cursor-pointer">
                         <div
@@ -580,7 +580,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="absolute hexagon-grid CustomHexagon mb-8 mr-[80px] lg:mr-0 lg:mb-0 top-[105%] lg:top-[47%] right-1 sm:right-[200px] lg:right-[-70px]"
+                <div class="absolute hexagon-grid CustomHexagon mb-8 mr-[80px] lg:mr-0 lg:mb-0 top-[105%] lg:top-[47%] right-1 sm:right-[200px] lg:right-[-96px]"
                     onclick="handleNextClick()">
                     <a class="greaterthan cursor-pointer">
                         <div
@@ -597,11 +597,11 @@
 
         <div id="testimonial-2" style="display: none;">
             <div
-                class="relative testmain div2 flex flex-col sm:flex-row lg:flex-row mx-auto lg:w-[1084px] sm:w-[auto] h-auto lg:h-[380px] rounded-[20px] gap-4">
+                class="relative testmain div2 flex flex-col sm:flex-row mx-auto max-w-full lg:w-[1084px] h-auto lg:h-[380px] rounded-[20px] gap-4">
                 <div class="flex-1 flex flex-col h-auto items-start justify-center">
                     <p
-                        class="pl-3 lg:pl-[50px] w-full lg:w-[695px] font-Source Sans Pro font-400 text-[16px] lg:text-[19px] leading-[26px] text-black mb-4 text-justify">
-                        Spinovix transformed our skincare brand’s website with a stunning, user-friendly redesign. Their marketing strategies were smart, targeted, and brought real results. The team was professional, creative, and truly understood our brand’s vision. Highly impressed with their work—definitely recommend them to anyone looking to elevate their online presence and reach.
+                        class="px-4 lg:pl-[50px] w-full lg:w-[695px] font-Source Sans Pro font-400 text-[16px] lg:text-[19px] leading-[26px] text-black mb-4 text-justify">
+                        Spinovix transformed our skincare brand's website with a stunning, user-friendly redesign. Their marketing strategies were smart, targeted, and brought real results. The team was professional, creative, and truly understood our brand's vision. Highly impressed with their work—definitely recommend them to anyone looking to elevate their online presence and reach.
                     </p>
                     <div class="imgandtextdiv flex items-center w-full lg:w-[695px]">
                         <img src="/assets/shruti.png" alt="testimonal1" class="testi1 mr-4 pl-0 lg:pl-[40px] lg:w-28 lg:h-20" />
@@ -617,7 +617,7 @@
                         <div class="bg-Logo w-[200px] h-[100px] bg-contain bg-no-repeat"></div>
                     </div>
                 </div>
-                <div class="absolute hexagon-grid CustomHexagon mb-8 lg:mb-0 ml-[80px] lg:ml-0 top-[105%] lg:top-[47%] lg:left-[-70px] sm:left-[200px]"
+                <div class="absolute hexagon-grid CustomHexagon mb-8 lg:mb-0 ml-[80px] lg:ml-0 top-[105%] lg:top-[47%] lg:left-[-96px] sm:left-[200px]"
                     onclick="handlePreviousClick()">
                     <a class="lessthan cursor-pointer">
                         <div
@@ -629,7 +629,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="absolute hexagon-grid CustomHexagon mb-8 mr-[80px] lg:mr-0 lg:mb-0 top-[105%] lg:top-[47%] right-1 lg:right-[-70px] sm:right-[200px]"
+                <div class="absolute hexagon-grid CustomHexagon mb-8 mr-[80px] lg:mr-0 lg:mb-0 top-[105%] lg:top-[47%] right-1 lg:right-[-96px] sm:right-[200px]"
                     onclick="handleNextClick()">
                     <a class="greaterthan cursor-pointer">
                         <div
