--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         
         <!-- Right div with text content -->
         <div class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl flex flex-col md:text-left" data-aos="fade-up" data-aos-duration="3000">
-            <h2 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold mb-4 sm:mb-6 lg:mb-8 text-[#2a2a2a] font-['Source_Sans_Pro'] leading-tight">
+            <h2 class="text-xl sm:text-2xl md:text-3xl lg:text-5xl font-bold mb-4 sm:mb-6 lg:mb-8 text-[#2a2a2a] font-['Source_Sans_Pro'] leading-tight">
                 Your <span class="text-white">Vision</span>. Our Code.<br/> <span class="text-white">Designed</span> to Win.
             </h2>
             
-            <p class="text-xs sm:text-sm md:text-base lg:text-xl text-white text-justify md:text-left font-['Source_Sans_Pro'] leading-relaxed mt-4 sm:mt-6 lg:mt-8">
+            <p class="text-md sm:text-md lg:text-2xl text-white text-justify md:text-left font-['Source_Sans_Pro'] leading-relaxed mt-4 sm:mt-6 lg:mt-8">
                 In a digital world flooded with one-size-fits-all services, Spinnovix stands out by engineering custom-built solutions that blend innovation, performance, and security. We don't just build software—we architect experiences that create real business impact.
             </p>
         </div>
